@@ -22,26 +22,24 @@ import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
-
 import org.apache.log4j.Logger;
 
 /**
- * A simple subclass of {@link ThreadPoolExecutor} to keep track of in progress
- * tasks as well as other interesting statistics.
- * 
- * The content of this class is copied from article "Java theory and practice:
- * Instrumenting applications with JMX"
- * 
+ * A simple subclass of {@link ThreadPoolExecutor} to keep track of in progress tasks as well as
+ * other interesting statistics.
+ *
+ * The content of this class is copied from article "Java theory and practice: Instrumenting
+ * applications with JMX"
+ *
  * @author hluu
- * 
  */
 public class TrackingThreadPool extends ThreadPoolExecutor {
 
-  private static Logger logger = Logger.getLogger(TrackingThreadPool.class);
+  private static final Logger logger = Logger.getLogger(TrackingThreadPool.class);
 
   private final Map<Runnable, Boolean> inProgress =
-      new ConcurrentHashMap<Runnable, Boolean>();
-  private final ThreadLocal<Long> startTime = new ThreadLocal<Long>();
+      new ConcurrentHashMap<>();
+  private final ThreadLocal<Long> startTime = new ThreadLocal<>();
 
   private ThreadPoolExecutingListener executingListener =
       new NoOpThreadPoolExecutingListener();
@@ -49,66 +47,66 @@ public class TrackingThreadPool extends ThreadPoolExecutor {
   private long totalTime;
   private int totalTasks;
 
-  public TrackingThreadPool(int corePoolSize, int maximumPoolSize,
-      long keepAliveTime, TimeUnit unit, BlockingQueue<Runnable> workQueue,
-      ThreadPoolExecutingListener listener) {
+  public TrackingThreadPool(final int corePoolSize, final int maximumPoolSize,
+      final long keepAliveTime, final TimeUnit unit, final BlockingQueue<Runnable> workQueue,
+      final ThreadPoolExecutingListener listener) {
     super(corePoolSize, maximumPoolSize, keepAliveTime, unit, workQueue);
     if (listener != null) {
-      executingListener = listener;
+      this.executingListener = listener;
     }
   }
 
   @Override
-  protected void beforeExecute(Thread t, Runnable r) {
+  protected void beforeExecute(final Thread t, final Runnable r) {
     try {
-      executingListener.beforeExecute(r);
-    } catch (Throwable e) {
+      this.executingListener.beforeExecute(r);
+    } catch (final Throwable e) {
       // to ensure the listener doesn't cause any issues
       logger.warn("Listener threw exception", e);
     }
     super.beforeExecute(t, r);
-    inProgress.put(r, Boolean.TRUE);
-    startTime.set(new Long(System.currentTimeMillis()));
+    this.inProgress.put(r, Boolean.TRUE);
+    this.startTime.set(Long.valueOf(System.currentTimeMillis()));
   }
 
   @Override
-  protected void afterExecute(Runnable r, Throwable t) {
-    long time = System.currentTimeMillis() - startTime.get().longValue();
+  protected void afterExecute(final Runnable r, final Throwable t) {
+    final long time = System.currentTimeMillis() - this.startTime.get().longValue();
     synchronized (this) {
-      totalTime += time;
-      ++totalTasks;
+      this.totalTime += time;
+      ++this.totalTasks;
     }
-    inProgress.remove(r);
+    this.inProgress.remove(r);
     super.afterExecute(r, t);
     try {
-      executingListener.afterExecute(r);
-    } catch (Throwable e) {
+      this.executingListener.afterExecute(r);
+    } catch (final Throwable e) {
       // to ensure the listener doesn't cause any issues
       logger.warn("Listener threw exception", e);
     }
   }
 
   public Set<Runnable> getInProgressTasks() {
-    return Collections.unmodifiableSet(inProgress.keySet());
+    return Collections.unmodifiableSet(this.inProgress.keySet());
   }
 
   public synchronized int getTotalTasks() {
-    return totalTasks;
+    return this.totalTasks;
   }
 
   public synchronized double getAverageTaskTime() {
-    return (totalTasks == 0) ? 0 : totalTime / totalTasks;
+    return (this.totalTasks == 0) ? 0 : this.totalTime / this.totalTasks;
   }
 
   private static class NoOpThreadPoolExecutingListener implements
       ThreadPoolExecutingListener {
 
     @Override
-    public void beforeExecute(Runnable r) {
+    public void beforeExecute(final Runnable r) {
     }
 
     @Override
-    public void afterExecute(Runnable r) {
+    public void afterExecute(final Runnable r) {
     }
   }
 }
